# discord-bot

./: .gitignore  .gitmodules  CMakeLists.txt
include/: data_structs.h  filemanager.h
src/: filemanager.cpp  main.cpp
